force-app/main/default/objects/Navigation_Item__c/Navigation_Item__c.object-meta.xml
<CustomObject>
    <label>Navigation Item</label>
    <nameField>
        <displayFormat>NI-{0000}</displayFormat>
        <label>Navigation Item #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Navigation Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>