force-app/main/default/objects/Navigation_Item__c/fields/Filter_Criteria__c.field-meta.xml
<CustomField>
    <fullName>Filter_Criteria__c</fullName>
    <inlineHelpText>SOQL Filter Criteria. Use operators including =, !=, LIKE</inlineHelpText>
    <label>Filter Criteria</label>
    <type>TextArea</type>
</CustomField>