force-app/main/default/objects/Navigation_Item__c/fields/ObjectName__c.field-meta.xml
<CustomField>
    <fullName>ObjectName__c</fullName>
    <label>Object API Name</label>
    <length>150</length>
    <type>Text</type>
</CustomField>