force-app/main/default/objects/Navigation_Item__c/fields/PageName__c.field-meta.xml
<CustomField>
    <fullName>PageName__c</fullName>
    <label>Page Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>LandingPage</fullName>
                <default>true</default>
                <label>LandingPage</label>
            </value>
            <value>
                <fullName>Clinical Engagement Landing Page</fullName>
            </value>
            <value>
                <fullName>Patient Engagement Landing Page</fullName>
            </value>
            <value>
                <fullName>MedTech Commercial &amp; Medical Engagement Landing Page</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>