force-app/main/default/objects/Navigation_Item__c/fields/RelatedEntityAPIName__c.field-meta.xml
<CustomField>
    <fullName>RelatedEntityAPIName__c</fullName>
    <inlineHelpText>Use only if Navigation Type = &quot;standard__recordRelationshipPage&quot;</inlineHelpText>
    <label>Related Entity API Name</label>
    <length>200</length>
    <type>Text</type>
</CustomField>