force-app/main/default/objects/Navigation_Item__c/fields/Section_Detail__c.field-meta.xml
<CustomField>
    <fullName>Section_Detail__c</fullName>
    <label>Section Detail</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>