force-app/main/default/objects/Navigation_Item__c/fields/Section_Heading__c.field-meta.xml
<CustomField>
    <fullName>Section_Heading__c</fullName>
    <label>Section Heading</label>
    <length>250</length>
    <type>Text</type>
</CustomField>