force-app/main/default/objects/Navigation_Item__c/fields/Target_App__c.field-meta.xml
<CustomField>
    <fullName>Target_App__c</fullName>
    <label>Target App</label>
    <length>200</length>
    <type>Text</type>
</CustomField>