force-app/main/default/objects/Navigation_Item__c/fields/Target_RecordId__c.field-meta.xml
<CustomField>
    <fullName>Target_RecordId__c</fullName>
    <label>Target RecordId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>