force-app/main/default/objects/Navigation_Item__c/fields/Target_Tab_Name__c.field-meta.xml
<CustomField>
    <fullName>Target_Tab_Name__c</fullName>
    <label>Target Location</label>
    <length>150</length>
    <type>Text</type>
</CustomField>