force-app/main/default/objects/Navigation_Item__c/validationRules/Filter_Crieria_is_must.validationRule-meta.xml
<ValidationRule>
    <fullName>Filter_Crieria_is_must</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL(NavigationType__c , &apos;standard__recordPage&apos;) &amp;&amp; ISBLANK( Filter_Criteria__c )</errorConditionFormula>
    <errorDisplayField>Filter_Criteria__c</errorDisplayField>
    <errorMessage>Please enter filter criteria i.e.where clause to fetch the exact record</errorMessage>
</ValidationRule>