force-app/main/default/objects/Navigation_Item__c/validationRules/Related_Entity_is_must.validationRule-meta.xml
<ValidationRule>
    <fullName>Related_Entity_is_must</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL(NavigationType__c , &apos;standard__recordRelationshipPage&apos;) &amp;&amp; ISBLANK(RelatedEntityAPIName__c)</errorConditionFormula>
    <errorDisplayField>RelatedEntityAPIName__c</errorDisplayField>
    <errorMessage>Please enter the API name of Related object where you want to navigate</errorMessage>
</ValidationRule>