force-app/main/default/objects/Navigation_Item__c/listViews/Patient_Engagement_Landing_Page_Items.listView-meta.xml
<ListView>
    <fullName>Patient_Engagement_Landing_Page_Items</fullName>
    <columns>NAME</columns>
    <columns>Section_Heading__c</columns>
    <columns>Sequence_Number__c</columns>
    <columns>isActive__c</columns>
    <columns>Icon_Name__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PageName__c</field>
        <operation>equals</operation>
        <value>Patient Engagement Landing Page</value>
    </filters>
    <label>Patient Engagement Landing Page Items</label>
</ListView>